--- a/app/src/main/res/layout/activity_network_select.xml
+++ b/app/src/main/res/layout/activity_network_select.xml
@@ -10,9 +10,19 @@
         android:id="@+id/tmobile_netBtn"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:onClick="onClick"
         android:text="@string/tmobile"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="0dp"
-        android:layout_marginEnd="8dp" />
+        tools:layout_editor_absoluteY="0dp" />
+
+    <Button
+        android:id="@+id/tmo2_btn"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="tmo2"
+        app:layout_constraintTop_toBottomOf="@+id/tmobile_netBtn"
+        tools:layout_editor_absoluteX="8dp" />
 </android.support.constraint.ConstraintLayout>
