--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -22,7 +22,7 @@
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/add_balBtn"
         android:layout_width="wrap_content"
         android:layout_height="128dp"
         android:layout_marginBottom="24dp"
