--- a/app/src/main/res/layout/activity_network_select.xml
+++ b/app/src/main/res/layout/activity_network_select.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context="strada.io.topup.NetworkSelectActivity">
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="@string/network_instruction1"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="8dp" />
+
     <Button
         android:id="@+id/tmobile_netBtn"
         android:layout_width="368dp"
@@ -15,14 +26,20 @@
         android:onClick="onClick"
         android:text="@string/tmobile"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="0dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        android:layout_marginTop="32dp" />
 
     <Button
-        android:id="@+id/tmo2_btn"
+        android:id="@+id/airtel_netBtn"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:onClick="onClick"
-        android:text="tmo2"
-        app:layout_constraintTop_toBottomOf="@+id/tmobile_netBtn"
-        tools:layout_editor_absoluteX="8dp" />
+        android:text="@string/airtel"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tmobile_netBtn" />
+
 </android.support.constraint.ConstraintLayout>
